# APEX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
exec/: CMakeLists.txt  args_parser.cpp  main.cpp
include/apex/: apex.hpp
include/apex/dictionary/: dictionary.hpp  dictionary_builder.hpp
include/avpjoin/: avpjoin.hpp
include/dictionary/: dictionary.hpp  dictionary_builder.hpp
include/exec/: apex.hpp  args_parser.hpp
include/index/: characteristic_set.hpp  cs_daa_map.hpp  daas.hpp  index_builder.hpp  index_retriever.hpp  new_predicate_index.hpp  predicate_index.hpp
include/parser/: sparql_parser.hpp
include/query/: pre_processor.hpp  query_executor.hpp  query_graph.hpp  result_generator.hpp  result_map_iterator.hpp  sub_query_executor.hpp  variable.hpp  variable_group.hpp
include/utils/: bit_operations.hpp  chunked_vector.hpp  disjoint_set_union.hpp  leapfrog_join.hpp  mmap.hpp  uds_service.hpp
queries/dbpedia/: full_test.txt  test.txt  train.txt
queries/watdiv500m/: full_test.txt  scalability_test.txt  test.txt  train.txt
queries/wdbench/: full_test.txt  scalability_test.txt  test.txt  train.txt
queries/wgpb/: train.txt
queries/wikidata/: test.txt  train.txt
queries/yago2s/: y4.q
scripts/: build.sh
src/: CMakeLists.txt  apex.cpp  avpjoin.cpp
src/dictionary/: dictionary.cpp  dictionary_builder.cpp
src/exec/: apex.cpp  main.cpp  server.cpp
src/exec/web/: index.html  styles.css
src/index/: characteristic_set.cpp  cs_daa_map.cpp  daas.cpp  index_builder.cpp  index_retriever.cpp  new_predicate_index.cpp  predicate_index.cpp
src/interface/: server.cpp
src/interface/web/: app.js  styles.css
src/parser/: sparql_lexer.cpp  sparql_parser.cpp
src/query/: pre_processor.cpp  query_executor.cpp  query_graph.cpp  result_generator.cpp  result_map_iterator.cpp  sub_query_executor.cpp  variable.cpp  variable_group.cpp
src/query/variable_order/: generate_order.py  model.py  module.py  udp_service.py  uds_service.py
src/server/: server.cpp
src/utils/: bit_operations.cpp  bitset.cpp  chunked_vector.cpp  join_list.cpp  leapfrog_join.cpp  udp_service.cpp  uds_service.cpp  vbyte.cpp
time_complexity/: time_complexity.tex
(+103 files in other folders)
